[tool.poetry]
name = "blog-manager-action"
version = "0.1.0"
description = ""
authors = ["WoolDoughnut310 <wooldoughnutspi@outlook.com>"]
readme = "README.md"
packages = [{include = "blog_manager_action"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
